apps/synology-media-proxy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviepilot-external
  namespace: homelab
spec:
  ports:
    - name: http
      port: 13000
      protocol: TCP
      targetPort: 13000
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: moviepilot-external
  namespace: homelab
subsets:
  - addresses:
      - ip: 10.0.0.100 # 群晖 LAN IP
    ports:
      - name: http
        port: 13000
        protocol: TCP
